examples/invalid/unsed_var.reqlang
```%config
[[vars]]
name = "base_url"
```

```%request
GET / HTTP/1.1
```
